[project]
name = "wolf3d"
version = "0.1.0"
description = "A simple demo of a 2D raycaster (think Wolfenstein 3D)"
authors = [{ name = "Wyatt Ferguson", email = "wyattf@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
]

[tool.taskipy.tasks]
format = "ruff format ./src/"
lint = "ruff check --fix ./src/"
test = "pytest tests"
run = "uv run ./src/game.py"

[tool.ruff]
line-length = 120
indent-width = 4
format.indent-style = "space"
target-version = "py312"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.3",
    "taskipy>=1.14.1",
]
